# A_Theory_of_Agency

./: .gitignore  ANALYSIS_HANDOFF.md  README.md  STATUS.md  agency_dependent_fairness_empirical_audit.md  pyproject.toml
.claude/: launch.json
adfe_runner/: __init__.py  analysis.py  backends.py  cli.py  integrity.py  io.py  ollama.py  paper.py  prompting.py  publication.py  schemas.py  scoring.py  site.py  stats.py  v2_analysis.py  v2_figures.py  validation.py
archives/workshop_legacy_20260622/: STATUS.md
configs/: agency_mode_contrast.yml  frontier_xai.yml  v2_clean_local_grok.yml
configs/ablations/: no_refusal_criteria.yml
data/: prompts.jsonl  remediation_role_policy_addendum.md  role_cards.yml  stress_prompts.jsonl
data/experiment_samples/: policy_ablation_300_keys.json
data/policy_ablation_addenda/: no_refusal_criteria.md  no_role_specific_rules.md  no_source_uncertainty.md  no_viewpoint_parity.md
data/regression_gates/: civic_role_gate.json
data/source_packets/: abortion_2026_static.json  climate_2026_static.json  immigration_2026_static.json  policing_2026_static.json  taxation_2026_static.json  voting_2026_static.json
docs/: UPDATING.md  index.html
docs/data/: summary.js
report/: adfe_report.tex
runs/: README.md
scripts/: README.md  com.adfe.frontier.plist  run_frontier.sh  run_pipeline.sh  run_v2_pipeline.sh  run_workshop_experiments.sh
tests/: test_analysis.py  test_contracts.py  test_experiment_workflow.py  test_integrity.py  test_methodology.py  test_paper.py  test_rating_workflow.py  test_scoring.py  test_v2.py
(+95 files in other folders)
