[project]
name = "adfe-runner"
version = "0.1.0"
description = "Role-conditioned fairness evaluation harness for civic AI systems"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "matplotlib>=3.9",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "requests>=2.32",
  "rich>=13.7",
  "scipy>=1.13",
  "seaborn>=0.13",
  "statsmodels>=0.14",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adfe_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
